# ainews

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  startup.sh
core/: admin.py  models.py  scrapers.py  tasks.py  urls.py  views.py
core/management/commands/: get_news.py  match_news_to_urls.py  print_airtable_schema.py  run.py  scrape.py  sync_sitemap.py  sync_to_airtable.py
core/migrations/: 0001_initial.py  0002_sitemapurl.py  0003_story_description.py  0004_sitemapurl_content.py  0005_post.py  0006_remixable.py  0007_remixable_remixed_as.py  0008_remixableimage.py  0009_remixable_remixed_image.py
core/templates/core/: home.html  post_list.html  remixed_list.html
curator/: asgi.py  settings.py  urls.py  wsgi.py
