[project]
name = "news-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advertools>=0.16.1",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "granian>=1.6.3",
    "openai>=1.54.3",
    "python-dotenv>=1.0.1",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
]
