[project]
name = "news-curator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "advertools>=0.16.1",
    "anthropic>=0.40.0",
    "beautifulsoup4>=4.12.3",
    "django>=5.1.3",
    "djangorestframework>=3.15.2",
    "granian>=1.6.3",
    "markdownify>=0.14.1",
    "openai>=1.54.3",
    "pyairtable>=3.0.0",
    "python-dotenv>=1.0.1",
    "replicate>=1.0.4",
    "requests-cache>=1.2.1",
    "requests>=2.32.3",
    "ultimate-sitemap-parser>=0.5",
]
